--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,31 @@
 .links a{
-    margin-left: 4px;
+    margin-left: 20px;
     text-decoration: none;
     margin-top: 5px;
+   padding-right: 40px;
+   font-weight: bold;
+   font-size: larger;
+   color: whitesmoke;
+}
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-top: 20px;
+    background-color: cadetblue;
+    align-items: center;
+    padding: 20px;
+    border-radius: 7px;
+    margin-bottom: 10px;
+}
+.header h1{
+    color: white;
+    padding-left: 40px;
+    font-weight: bold;
+}
+.links a:hover{
+    color: gold;
+    cursor: pointer;
 }
