--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,18 +20,20 @@
     margin-bottom: 10px;
     padding-left: 170px;
     padding-right: 170px;
+    box-shadow: 0 4px 8px 0 rgba(26, 25, 25, 0.5), 0 6px 20px 0 rgba(252, 244, 244, 0.19);
 }
 .header h1{
     color: white;
     padding-left: 40px;
     font-weight: bold;
+    
 }
 .links a:hover{
-    color: white;
+    color: black;
     cursor: pointer;
     /* border: 1px solid red; */
-    background-color: blueviolet;
-    padding-left: 37px;
+    background-color: white;
+    padding-left: 38px;
     padding-top: 3px;
     padding-bottom: 5px;
     border-radius: 5px;
