--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,10 +5,17 @@
     text-align: left;
     background-color: white;
     padding: 20px; 
+    font-weight: bolder;
+    font-size: larger;
 }
 .about img{
-    height: 300px;
+    height: 400px;
     width: 100%;
     margin-right: 20px;
     
+}
+.products{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
 }
