--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -3,7 +3,7 @@
    height: 400px;
    width: 400px;
    border-radius: 10px;
-   margin: 20px;
+   margin-top: 20px;
 }
 .details h2{
     margin: 20px;
