--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.not-found{
+    margin-top: 30vh;
+    
+    color: cadetblue;
+    font-size: 60px;
+    font-weight: bold;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
