--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -3,10 +3,7 @@
     margin-right: 300px;
     margin-top: 100px;
 }
-Accordion.Header{
-    color: cadetblue;
-}
-.header{
-       color: cadetblue;
-       font-weight: bold;
+
+.one{
+    font-weight: bold;
 }
