--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,3 +19,31 @@
     grid-template-columns: repeat(3,1fr);
     gap: 15px;
 }
+@media only screen and (max-width: 600px){
+    .products{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 15px;
+    }
+}
+@media only screen and (min-width:600px){
+    .products{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 15px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .products{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 15px;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .products{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 15px;
+    }
+}
