--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -7,3 +7,33 @@
 .one{
     font-weight: bold;
 }
+@media only screen and (max-width: 600px){
+    .accordion{
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 100px;
+    }
+}
+@media only screen and (min-width:600px){
+    .accordion{
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (min-width: 768px)  {
+    .accordion{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .accordion{
+        margin-left: 300px;
+        margin-right: 300px;
+        margin-top: 100px;
+    }
+}
