--- a/src/components/Final/Final.css
+++ b/src/components/Final/Final.css
@@ -13,3 +13,23 @@
     border-radius: 10px;
     border: 0px;
 }
+@media only screen and (max-width: 600px){
+    .quizes button{
+        width: 430px;
+    }
+}
+@media only screen and (min-width:600px){
+    .quizes button{
+        width: 500px;
+    }
+}
+@media only screen and (min-width: 768px)  {
+    .quizes button{
+        width: 600px;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .quizes button{
+        width: 600px;
+    }
+}
