--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,26 +42,61 @@
     .header{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+    }
+    .links{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
     }
 }
 @media only screen and (min-width:600px){
-    .products{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 15px;
+    .header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .links{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
-@media only screen and (min-width: 768px) {
-    .products{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        gap: 15px;
+@media only screen and (min-width: 768px)  {
+    .header{
+        display: flex;
+        flex-direction: row;
+      
+    }
+    .links{
+        display: flex;
+        flex-direction: row;
+     
     }
 }
 @media only screen and (min-width: 992px) {
-    .products{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 15px;
+    .links a{
+        margin-left: 20px;
+        text-decoration: none;
+        margin-top: 5px;
+       padding-right: 40px;
+       font-weight: bold;
+       font-size: larger;
+       color: whitesmoke;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        /* margin-left: 120px;
+        margin-right: 120px; */
+        margin-top: 20px;
+        background-color: cadetblue;
+        align-items: center;
+        padding: 20px;
+        margin-bottom: 10px;
+        padding-left: 170px;
+        padding-right: 170px;
+        box-shadow: 0 4px 8px 0 rgba(26, 25, 25, 0.5), 0 6px 20px 0 rgba(252, 244, 244, 0.19);
     }
 }
