--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -25,12 +25,20 @@
         grid-template-columns: repeat(1,1fr);
         gap: 15px;
     }
+    .about{
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media only screen and (min-width:600px){
     .products{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         gap: 15px;
+    }
+    .about{
+        display: flex;
+        flex-direction: column;
     }
 }
 @media only screen and (min-width: 768px) {
@@ -45,5 +53,16 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap: 15px;
+    }
+    .about{
+        display: flex;
+        flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    background-color: white;
+    padding: 20px; 
+    font-weight: bolder;
+    font-size: larger;
     }
 }
