--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -26,3 +26,83 @@
     font-size: x-large;
     cursor: pointer;
 }
+@media only screen and (max-width: 600px){
+    .question{
+        background-color: white;
+        margin: 10px;
+        margin-left: 5px ;
+        margin-right: 5px;
+        padding: 20px;
+        text-align: left;
+        padding-left: 40px;
+        border-radius: 8px;
+        font-weight: bold;
+        color: cadetblue;
+        box-shadow: 4px 4px 9px gray;
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (min-width:600px){
+    .question{
+        background-color: white;
+        margin: 10px;
+        margin-left: 10px ;
+        margin-right: 10px;
+        padding: 20px;
+        text-align: left;
+        padding-left: 40px;
+        border-radius: 8px;
+        font-weight: bold;
+        color: cadetblue;
+        box-shadow: 4px 4px 9px gray;
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .question{
+        background-color: white;
+        margin: 10px;
+        margin-left: 10px ;
+        margin-right: 10px;
+        padding: 20px;
+        text-align: left;
+        padding-left: 40px;
+        border-radius: 8px;
+        font-weight: bold;
+        color: cadetblue;
+        box-shadow: 4px 4px 9px gray;
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .question{
+        background-color: white;
+        margin: 10px;
+        margin-left: 10px ;
+        margin-right: 10px;
+        padding: 20px;
+        text-align: left;
+        padding-left: 40px;
+        border-radius: 8px;
+        font-weight: bold;
+        color: cadetblue;
+        box-shadow: 4px 4px 9px gray;
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    .question{
+        background-color: white;
+        margin: 10px;
+        margin-left: 500px ;
+        margin-right: 500px;
+        padding: 20px;
+        text-align: left;
+        padding-left: 40px;
+        border-radius: 8px;
+        font-weight: bold;
+        color: cadetblue;
+        box-shadow: 4px 4px 9px gray;
+        margin-bottom: 20px;
+    }
+}
